<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>intellistream</groupId>
    <artifactId>MorphStream</artifactId>
    <packaging>pom</packaging>
    <version>0.1</version>
    <modules>
        <module>morph-core</module>
        <module>morph-clients</module>
        <module>morph-web</module>
        <module>morph-common</module>
    </modules>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <morphstream.version>0.0.2</morphstream.version>
        <kafka.version>0.8.2.1</kafka.version>
        <scala.binary.version>2.11</scala.binary.version>
        <scala.version>2.11.1</scala.version>
        <json.version>20141113</json.version>
        <jedis.version>2.4.2</jedis.version>
        <sedis.version>1.2.2</sedis.version>
        <slf4j.version>2.0.7</slf4j.version>
        <commons-cli.version>1.3.1</commons-cli.version>
        <snakeyaml.version>1.11</snakeyaml.version>
    </properties>
</project>
